[package]
name = "battery_calibrate"
version = "0.1.0"
edition = "2021"

[dependencies]
time = { version = "0.3", default-features = false, features = ["formatting", "local-offset", "macros", "std"] }
once_cell = "1.18.0"

[target.aarch64-linux-android]
linker = "aarch64-linux-android-clang"
rustflags = [
    "-C", "link-arg=-static-libgcc",
    "-C", "link-arg=-Wl,--gc-sections",
    "-C", "link-arg=-Wl,--strip-all",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
debug = false